DRO with validation , MIME detect , exception handling